tests/bad/undeclared_function.mil
function a () {
	print(42);
}

function main () {
	a = 4;
	test_func();
}
